# gryphon-app

./: .editorconfig  .gitignore  Cargo.toml  EVENT_DRIVEN_EXAMPLE.md  LICENSE  PATH_PLANNING_EXAMPLE.md  README.md  config.toml  docker-compose.yml
.github/workflows/: ci.yml  e2e-kafka.yml  pg_integration.yml
_old/: LICENSE  README.md
_old/crates/core/: Cargo.toml  build.rs
_old/crates/core/src/: agent.rs  error.rs  lib.rs
_old/crates/core/tests/: basic.rs
_old/proto/: agents.proto
_old2/infra-structure/: Dockerfile  docker-compose.yml
_old2/infra-structure/path_planner/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: batch.rs  path.rs
docs/: AGGREGATE_REFACTORING_SUMMARY.md  DISTRIBUTED_PATHPLAN_WORKER_SUMMARY.md  LOGGER.md  README.md  adapter_choices.md  folder_naming_thougts.md  path_planning_success.md  route_request_example.md
docs/diagrams/: logger_injection.puml  path_planning_sequence.puml  path_planning_sequence_detailed.puml  plan_lifecycle_state.puml  plan_lifecycle_state_detailed.puml  ports_adapters.puml  ports_adapters_detailed.puml
infra-structure/: Readme.md
infra-structure/path_planner/src/: main.rs
infra-structure/simulator/: Cargo.toml
infra-structure/simulator/src/: main.rs
prompts/: development_prompts.md  initial-prompt.md
resources/path_planning/: README.md  manifest.toml
resources/path_planning/geojson/: sample_map.geojson
scripts/: init-db.sql  kafka-setup.sh  run_kafka_e2e.sh  run_pg_integration_test.sh
src/: config.rs  lib.rs  main.rs
src/adapters/inbound/: esrs_pg_store.rs  event_store.rs  file_event_store.rs  kafka_event_store.rs  mod.rs  snapshot_store.rs
src/adapters/outbound/: README.md  buffered_logger.rs  console_logger.rs  esrs_kafka_bus.rs  file_logger.rs  kafka.rs  mod.rs  multi_logger.rs  noop_logger.rs  path_planning_data.rs  postgres.rs  postgres_graph_store.rs
src/application/: dynamics_service.rs  gui_service.rs  kinematic_agent_service.rs  logical_agent_service.rs  mod.rs  path_planning_service.rs  pathplan_client.rs  technical_agent_service.rs
src/common/: aggregate.rs  error.rs  event.rs  mod.rs  snapshot.rs
src/domains/: logger.rs  mod.rs
src/domains/dynamics/: actors.rs  aggregate.rs  events.rs  mod.rs  projections.rs
src/domains/gui/: actors.rs  aggregate.rs  events.rs  projections.rs
src/domains/kinematic_agent/: actors.rs  aggregate.rs  events.rs  projections.rs
src/domains/logical_agent/: actors.rs  aggregate.rs  events.rs  mod.rs  projections.rs
src/domains/path_planning/: README.md  actors.rs  aggregate.rs  events.rs  loader.rs  mod.rs  ports.rs  projections.rs
src/domains/path_planning/aggregate/: mod.rs  path_planner.rs  plan.rs  types.rs  worker.rs  workspace.rs
src/domains/path_planning/aggregate/path_planner/: assignment.rs  event_apply.rs  mod.rs  path_planner.rs
src/domains/technical_agent/: actors.rs  aggregate.rs  events.rs  projections.rs
src/esrs/: dynamics.rs  gui.rs  kinematic_agent.rs  logical_agent.rs  mod.rs  path_planning.rs  technical_agent.rs  tests.rs
src/resources/: graph.toml
tests/: README.md  adapter_tests.rs  application_tests.rs  domain_tests.rs  esrs_e2e.rs  esrs_integration.rs  graph_builder_tests.rs  integration_tests.rs  logger_injection.rs  path_planning_unit_tests.rs  pathplan_client_injection.rs  pg_integration_tests.rs
