[package]
name = "gryphon-app"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A DDD-based event-sourced application for autonomous agent management"

[dependencies]
# Event Sourcing
eventstore = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build"] }

# PostgreSQL
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.12"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Configuration
config = "0.14"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Testing
tokio-test = "0.4"

[dev-dependencies]
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["kafka", "postgres"] }

[[bin]]
name = "gryphon-app"
path = "src/main.rs"

[lib]
name = "gryphon_app"
path = "src/lib.rs"
