[package]
name = "gryphon-app"
version = "0.2.0"
edition = "2021"
authors = ["Eike Schumann <eike.schumann@gmail.com>"]
description = "A DDD-based event-sourced application for autonomous agent management"

[dependencies]
# Event Sourcing
eventstore = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
fast_log = "1"
log = "0.4"

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build"] }

# PostgreSQL
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.12"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Configuration
config = "0.14"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Testing
tokio-test = "0.4"

# Random number generation
rand = "0.8"

# Path planning graph serialization
petgraph = { version = "0.8.2", features = ["serde-1"] }
bincode = "1.3.3"
geojson = "0.24.2"
ordered-float = "5.0.0"

# Event sourcing framework (esrs) and SQLx for Postgres persistence
esrs = { version = "0.18" }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "json", "chrono"] }

[dev-dependencies]
testcontainers = "0.24"
tempfile = "3.3"
testcontainers-modules = { version = "0.12.1", features = ["postgres"] }

[[bin]]
name = "gryphon-app"
path = "src/main.rs"

[[bin]]
name = "pathplan_worker"
path = "src/bin/pathplan_worker/main.rs"

[[bin]]
name = "pathplan_planner"
path = "src/bin/pathplan_planner.rs"

[[bin]]
name = "pathplan_client"
path = "src/bin/pathplan_client.rs"


[lib]
name = "gryphon_app"
path = "src/lib.rs"

[features]
pg_integration = []
use_testcontainers = []
