[package]
name = "gryphon-core"
edition = "2021"
version = "0.1.0"
authors = ["Gryphon Project Contributors"]
license = "MIT"
repository = "https://github.com/eikeschumann971/gryphon-app"
readme = false
build = "build.rs"

[lib]
name = "gryphon_core"
path = "src/lib.rs"
crate-type = ["lib"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = { workspace = true }

[package.metadata]
description = "Core domain types & protobuf glue for the Gryphon simulation platform"