[package]
name = "gryphon-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core domain types and protobuf definitions for the Gryphon simulation platform"
authors = ["Gryphon Project Contributors"]

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true }

[features]
default = []
serde = ["dep:serde", "serde_json"]

[build-dependencies]
prost-build = { workspace = true }

[package.metadata.cargo-udeps.ignore]
# (Placeholder to avoid false positives for build-dependencies)
